{{$NEXT}}

    - Create Test2::Compare::Negatable
    - Add bool() for deep comparisons
    - Implicit end() for checks inside is()
    - Add try_ok to Tools/Exception
    - Export convert() in Test2::Compare
    - Make convert more flexible
    - Document how to write a compare tool with custom behavior

0.000058  2016-08-13 13:06:10-07:00 America/Los_Angeles

    - No changes from last trial

0.000057  2016-08-10 22:13:39-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Add contact info to docs

0.000056  2016-08-09 14:09:17-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Make sure Test2::Compare::convert loads deps

0.000055  2016-07-30 13:18:13-07:00 America/Los_Angeles

    - Spelling fix from Debian (Thanks gregor herrmann)
    - Fix \d -> [0-9] in several places (Thanks Mark F.)

0.000054  2016-07-28 07:10:34-07:00 America/Los_Angeles

    - No changes from last trial

0.000053  2016-07-22 22:51:37-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Make bag check fail when given an empty array
    - Clean up bag diagnostics

0.000052  2016-07-18 09:07:25-07:00 America/Los_Angeles

    - No changes from last TRIAL

0.000051  2016-07-13 18:00:17-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Switch Extended bundle to use Importer
    - Add meta_check as alias for meta

0.000050  2016-07-09 16:58:59-07:00 America/Los_Angeles

    - No Changes since trial

0.000049  2016-07-07 22:02:24-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Doc fixes
    - Add U() quick check to Test2::Tools::Compare

0.000048  2016-07-02 22:08:10-07:00 America/Los_Angeles

    - No changes from last trial

0.000047  2016-07-01 18:09:26-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix global destruction warning
    - Minor test fix to keep 5.8 working

0.000046  2016-07-01 17:31:23-07:00 America/Los_Angeles (TRIAL RELEASE)

    - ref-ref's can be used in deep comparisons
    - Fix mocking to override a base class's method

0.000045  2016-07-01 09:30:09-07:00 America/Los_Angeles
